[package]
name = "orchestrai"
version = "0.1.0"
edition = "2024"

[lib]
name = "orchestrai"
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3", "pyo3/extension-module"]

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
pyo3 = { version = "0.23", features = ["abi3-py39"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
urlencoding = "2"
